--- a/Spatial_pyramid_matching.ipynb
+++ b/Spatial_pyramid_matching.ipynb
@@ -42,42 +42,77 @@
         "id": "eBEDlHpoRsQj"
       },
       "source": [
-        "# Description\n",
+        "# Spatial Pyramid Matching\n",
         "---\n",
-        "We will examine the task of scene recognition starting with very simple methods — tiny images and nearest neighbor classification — and then move on to more advanced methods — bags of quantized local features and linear classifiers learned by support vector machines.\n",
+        "This note book implement SPM method from [Lazebnik et al. 2006](http://www.di.ens.fr/willow/pdfs/cvpr06b.pdf). For an excellent survey of pre-deep-learning feature encoding methods for bag of words models, see [Chatfield et al, 2011](http://www.robots.ox.ac.uk/~vgg/research/encoding_eval/).\n",
         "\n",
-        "Bag of words models are a popular technique for image classification inspired by models used in natural language processing. The model ignores or downplays word arrangement (spatial information in the image) and classifies based on a histogram of the frequency of visual words. The visual word \"vocabulary\" is established by clustering a large corpus of local features. See Szeliski chapter 14.4.1 for more details on category recognition with quantized features. In addition, 14.3.2 discusses vocabulary creation and 14.1 covers classification techniques.\n",
-        "\n",
-        "For this homework you will be implementing a basic bag of words model. You will classify scenes into one of 15 categories by training and testing on the 15 scene database (introduced in [Lazebnik et al. 2006](http://www.di.ens.fr/willow/pdfs/cvpr06b.pdf), although built on top of previously published datasets). [Lazebnik et al. 2006](http://www.di.ens.fr/willow/pdfs/cvpr06b.pdf) is a great paper to read, although we will be implementing the baseline method the paper discusses (equivalent to the zero level pyramid) and not the more sophisticated spatial pyramid (which is extra credit). For an excellent survey of pre-deep-learning feature encoding methods for bag of words models, see [Chatfield et al, 2011](http://www.robots.ox.ac.uk/~vgg/research/encoding_eval/).\n",
-        "\n",
-        "You are required to implement 2 different image representations -- tiny images and bags of SIFT features -- and 2 different classification techniques -- nearest neighbor and linear SVM. In the end of the notebook, you are specifically asked to report performance for the following combinations, and it is also highly recommended that you implement them in this order:\n",
-        "\n",
-        "- Tiny images representation and nearest neighbor classifier (accuracy of about 18-25%).\n",
-        "- Bag of SIFT representation and nearest neighbor - classifier (accuracy of about 50-60%).\n",
-        "- Bag of SIFT representation and linear SVM classifier (accuracy of about 60-70%).\n",
+        "## Implementation specs\n",
+        "--- \n",
+        "Procedure are replicated as in the original paper. Hyper-parameter are:      \n",
+        "- L=0,2   ||    M=200\n",
+        "- SIFT descriptor and K-means clustering for feature extractions\n",
         "\n",
         "## Dataset\n",
         "---\n",
-        "![Dataset Examples](https://www.cc.gatech.edu/~hays/compvision/proj4/categories.png \"Example scenes from of each category in the 15 scene dataset. Figure from Lazebnik et al. 2006.\")\n",
-        "The starter code trains and tests on 100 images from each category (i.e. 1500 training examples total and 1500 test cases total). In a real research paper, one would be expected to test performance on random splits of the data into training and test sets, but the starter code does not do this to ease debugging. Download the dataset [here](https://drive.google.com/a/cs.stonybrook.edu/file/d/0B446EB1iI6_Qc0Q1NTRTajdUVTg/view?usp=sharing).\n",
+        "[Caltech101](http://www.vision.caltech.edu/Image_Datasets/Caltech101/): Pictures of objects belonging to 101 categories. About 40 to 800 images per category. Most categories have about 50 images. Collected in September 2003 by Fei-Fei Li, Marco Andreetto, and Marc 'Aurelio Ranzato.  The size of each image is roughly 300 x 200 pixels.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BEQ8whqtnpKX"
+      },
+      "source": [
+        "## Data Loading \n",
+        "Load Caltech101 data and split them into train/test set according to the original paper specification: \n",
         "\n",
-        "## Starter Code\n",
-        "---\n",
-        "To make your task a little easier, below we provide some starter code which randomly guesses the category of every test image and achieves about 7% accuracy (1 out of 15 guesses is correct)."
+        "- train on 30 image per class and test on the rest \n",
+        "- limit number of test image to 50"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "collapsed": true,
-        "id": "14n0rmBlRsQn"
+        "id": "14n0rmBlRsQn",
+        "outputId": "40b0d7b1-cf33-4789-c810-9d5a23acbd5d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# import packages here\n",
+        "import sys\n",
+        "!{sys.executable} -m pip install opencv-python\n",
         "import cv2\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
+        "import sklearn\n",
+        "import pandas as pd\n",
         "import glob"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: opencv-python in c:\\users\\phi\\anaconda3\\lib\\site-packages (4.5.4.58)\n",
+            "Requirement already satisfied: numpy>=1.17.3 in c:\\users\\phi\\anaconda3\\lib\\site-packages (from opencv-python) (1.20.1)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "P5OvqnFtd2Cf"
+      },
+      "source": [
+        "# # Run this cell to connect to your Drive folder\n",
+        "\n",
+        "# from google.colab import drive\n",
+        "# drive.mount('/content/gdrive')"
       ],
       "execution_count": null,
       "outputs": []
@@ -86,13 +121,41 @@
       "cell_type": "code",
       "metadata": {
         "id": "e7mOqv4mRsQp",
-        "outputId": "bf8369d4-6749-46c0-a611-2a78ef918e94"
+        "outputId": "974de9c9-7033-4491-995b-d5945a38f2d3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "class_names = [name[11:] for name in glob.glob('data/train/*')]\n",
+        "DATA_DIR = \"Dropbox/data/101_ObjectCategories\"\n",
+        "x = len('Dropbox/data/101_ObjectCategories\\\\') # dummy string in class name.\n",
+        "class_names = [name[x:] for name in glob.glob(f'{DATA_DIR}/*')]\n",
         "class_names = dict(zip(range(0,len(class_names)), class_names))\n",
-        "print (class_names)\n",
-        "\n",
+        "print(class_names)\n",
+        "print(f'Number of class: {len(class_names)}')"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{0: 'accordion', 1: 'airplanes', 2: 'anchor', 3: 'ant', 4: 'BACKGROUND_Google', 5: 'barrel', 6: 'bass', 7: 'beaver', 8: 'binocular', 9: 'bonsai', 10: 'brain', 11: 'brontosaurus', 12: 'buddha', 13: 'butterfly', 14: 'camera', 15: 'cannon', 16: 'car_side', 17: 'ceiling_fan', 18: 'cellphone', 19: 'chair', 20: 'chandelier', 21: 'cougar_body', 22: 'cougar_face', 23: 'crab', 24: 'crayfish', 25: 'crocodile', 26: 'crocodile_head', 27: 'cup', 28: 'dalmatian', 29: 'dollar_bill', 30: 'dolphin', 31: 'dragonfly', 32: 'electric_guitar', 33: 'elephant', 34: 'emu', 35: 'euphonium', 36: 'ewer', 37: 'Faces', 38: 'Faces_easy', 39: 'ferry', 40: 'flamingo', 41: 'flamingo_head', 42: 'garfield', 43: 'gerenuk', 44: 'gramophone', 45: 'grand_piano', 46: 'hawksbill', 47: 'headphone', 48: 'hedgehog', 49: 'helicopter', 50: 'ibis', 51: 'inline_skate', 52: 'joshua_tree', 53: 'kangaroo', 54: 'ketch', 55: 'lamp', 56: 'laptop', 57: 'Leopards', 58: 'llama', 59: 'lobster', 60: 'lotus', 61: 'mandolin', 62: 'mayfly', 63: 'menorah', 64: 'metronome', 65: 'minaret', 66: 'Motorbikes', 67: 'nautilus', 68: 'octopus', 69: 'okapi', 70: 'pagoda', 71: 'panda', 72: 'pigeon', 73: 'pizza', 74: 'platypus', 75: 'pyramid', 76: 'revolver', 77: 'rhino', 78: 'rooster', 79: 'saxophone', 80: 'schooner', 81: 'scissors', 82: 'scorpion', 83: 'sea_horse', 84: 'snoopy', 85: 'soccer_ball', 86: 'stapler', 87: 'starfish', 88: 'stegosaurus', 89: 'stop_sign', 90: 'strawberry', 91: 'sunflower', 92: 'tick', 93: 'trilobite', 94: 'umbrella', 95: 'watch', 96: 'water_lilly', 97: 'wheelchair', 98: 'wild_cat', 99: 'windsor_chair', 100: 'wrench', 101: 'yin_yang'}\n",
+            "Number of class: 102\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VVYJ25IhhMeN",
+        "outputId": "89f8b770-1f58-4a5c-8862-c61d0c42047c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
         "def load_dataset(path, num_per_class=-1):\n",
         "    data = []\n",
         "    labels = []\n",
@@ -105,21 +168,20 @@
         "            data.append(cv2.imread(filename, 0))\n",
         "    return data, labels\n",
         "\n",
-        "# load training dataset\n",
-        "train_data, train_label = load_dataset('data/train/', 100)\n",
-        "train_num = len(train_label)\n",
-        "\n",
-        "# load testing dataset\n",
-        "test_data, test_label = load_dataset('data/test/', 100)\n",
-        "test_num = len(test_label)"
+        "# load the dataset\n",
+        "data, label = load_dataset(f'{DATA_DIR}/', 100)\n",
+        "num = len(label)\n",
+        "print(f'Number of image: {num}')\n",
+        "print(label[107:112])"
       ],
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "{0: 'Forest', 1: 'Bedroom', 2: 'Office', 3: 'Highway', 4: 'Coast', 5: 'InsideCity', 6: 'TallBuilding', 7: 'Industrial', 8: 'Street', 9: 'LivingRoom', 10: 'Suburb', 11: 'Mountain', 12: 'Kitchen', 13: 'OpenCountry', 14: 'Store'}\n"
+            "Number of image: 6398\n",
+            "[1, 1, 1, 1, 1]\n"
           ]
         }
       ]
@@ -129,20 +191,22 @@
       "metadata": {
         "scrolled": false,
         "id": "nAqNynORRsQq",
-        "outputId": "c913490a-6bb4-4e59-89a8-23ddd117e507"
+        "outputId": "982347cd-5a64-4435-ba28-7efab7f84ff9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# feature extraction\n",
+        "# DUMMY IMPLEMENTATION OF features extraction\n",
+        "\n",
         "def extract_feat(raw_data):\n",
         "    feat_dim = 1000\n",
         "    feat = np.zeros((len(raw_data), feat_dim), dtype=np.float32)\n",
         "    for i in range(0,feat.shape[0]):\n",
         "        feat[i] = np.reshape(raw_data[i], (raw_data[i].size))[:feat_dim] # dummy implemtation\n",
-        "        \n",
         "    return feat\n",
         "\n",
-        "train_feat = extract_feat(train_data)\n",
-        "test_feat = extract_feat(test_data)\n",
+        "feat = extract_feat(data)\n",
         "\n",
         "# model training: take feature and label, return model\n",
         "def train(X, Y):\n",
@@ -150,119 +214,24 @@
         "\n",
         "# prediction: take feature and model, return label\n",
         "def predict(model, x):\n",
-        "    return np.random.randint(15) # dummy implementation\n",
+        "    return np.random.randint(len(class_names)) # dummy implementation\n",
         "\n",
         "# evaluation\n",
-        "predictions = [-1]*len(test_feat)\n",
-        "for i in range(0, test_num):\n",
-        "    predictions[i] = predict(None, test_feat[i])\n",
+        "predictions = [-1]*len(feat)\n",
+        "for i in range(0, num):\n",
+        "    predictions[i] = predict(None, feat[i])\n",
         "    \n",
-        "accuracy = sum(np.array(predictions) == test_label) / float(test_num)\n",
+        "accuracy = sum(np.array(predictions) == label) / float(num)\n",
         "\n",
-        "print (\"The accuracy of my dummy model is {:.2f}%\".format(accuracy*100))"
+        "print (\"The accuracy of dummy model is {:.2f}%\".format(accuracy*100))"
       ],
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
-          "text": [
-            "The accuracy of my dummy model is 7.27%\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "pwqOyJYZRsQr"
-      },
-      "source": [
-        "## Problem 1: Tiny Image Representation + Nearest Neighbor Classifier\n",
-        "{25 points} You will start by implementing the tiny image representation and the nearest neighbor classifier. They are easy to understand, easy to implement, and run very quickly for our experimental setup (less than 10 seconds).\n",
-        "\n",
-        "The \"tiny image\" feature is one of the simplest possible image representations. One simply resizes each image to a small, fixed resolution (we recommend 16x16). It works slightly better if the tiny image is made to have zero mean and unit length (normalization). This is not a particularly good representation, because it discards all of the high frequency image content and is not especially invariant to spatial or brightness shifts. We are using tiny images simply as a baseline.\n",
-        "\n",
-        "The nearest neighbor classifier is equally simple to understand. When tasked with classifying a test feature into a particular category, one simply finds the \"nearest\" training example (L2 distance is a sufficient metric) and assigns  the label of that nearest training example to the test example. The nearest neighbor classifier has many desirable features — it requires no training, it can learn arbitrarily complex decision boundaries, and it trivially supports multiclass problems. It is quite vulnerable to training noise, though, which can be alleviated by voting based on the K nearest neighbors (but you are not required to do so). Nearest neighbor classifiers also suffer as the feature dimensionality increases, because the classifier has no mechanism to learn which dimensions are irrelevant for the decision.\n",
-        "\n",
-        "**Hints**:\n",
-        "- Use [cv2.resize()](https://docs.opencv.org/2.4/modules/imgproc/doc/geometric_transformations.html#resize) to resize the images;\n",
-        "- Use [NearestNeighbors in Sklearn](http://scikit-learn.org/stable/modules/neighbors.html) as your nearest neighbor classifier."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "AQMQcGylRsQs"
-      },
-      "source": [
-        "from scipy.misc import imresize  # resize images\n",
-        "import copy"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "wQvoCBO5RsQs"
-      },
-      "source": [
-        "# write your code here \n",
-        "def resize(data, dim):\n",
-        "    res = copy.deepcopy(data)\n",
-        "    for i in range(0, len(data)):\n",
-        "        res[i] = imresize(data[i], (dim, dim))        \n",
-        "    return res\n",
-        "\n",
-        "resize_train = resize(train_data, 16)\n",
-        "resize_test = resize(test_data, 16)\n",
-        "\n",
-        "def stretch(data, dim):\n",
-        "    x = np.zeros((len(data), dim*dim))\n",
-        "    for i in range(0, len(data)):\n",
-        "        x[i,:] = np.reshape(data[i], (1,dim*dim))\n",
-        "    return x\n",
-        "\n",
-        "train_x = stretch(resize_train, 16)\n",
-        "test_x = stretch(resize_test, 16)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "qsE2Lgp6RsQt",
-        "outputId": "2add586c-d98c-4f6b-9c05-db1fc4c4fe6c"
-      },
-      "source": [
-        "from sklearn.neighbors import KNeighborsClassifier\n",
-        "\n",
-        "# train model\n",
-        "def trainKNN(data, labels, k):\n",
-        "    neigh = KNeighborsClassifier(n_neighbors=k, p=2)\n",
-        "    neigh.fit(data, labels) \n",
-        "    return neigh\n",
-        "\n",
-        "cluster = [5, 10, 15, 20, 25, 30]\n",
-        "for i in range(len(cluster)):\n",
-        "    model = trainKNN(train_x, train_label, cluster[i])\n",
-        "    predict_test = model.predict(test_x)\n",
-        "    print (\"k =\", cluster[i], \", Accuracy: \", np.mean(predict_test == test_label)*100, \"%\")"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
           "name": "stdout",
-          "output_type": "stream",
           "text": [
-            "k = 5 , Accuracy:  21.6 %\n",
-            "k = 10 , Accuracy:  19.8666666667 %\n",
-            "k = 15 , Accuracy:  20.0666666667 %\n",
-            "k = 20 , Accuracy:  20.2 %\n",
-            "k = 25 , Accuracy:  20.0666666667 %\n",
-            "k = 30 , Accuracy:  19.1333333333 %\n"
+            "The accuracy of dummy model is 0.91%\n"
           ]
         }
       ]
